<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.arduino.water.dialog.DetailUsingViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_background"
        tools:ignore="SpUsage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_white_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/iv_close"
            android:background="@drawable/close"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:gravity="center"
            android:textSize="24dp"
            android:textColor="@color/basic"
            android:textStyle="bold"
            android:text="@{vm.calendarData.date}"
            />

        <TextView
            android:id="@+id/tv_total_using"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            app:layout_constraintTop_toBottomOf="@id/iv_close"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textColor="@color/basic"
            android:textSize="16dp"
            android:text="@{vm.calendarData.totalWaterDialog}"
            />

        <View
            android:id="@+id/line_horizontal"
            android:layout_width="match_parent"
            android:layerType="software"
            android:layout_height="1.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_total_using"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_dotted"
            />

        <View
            android:id="@+id/line_vertical"
            android:layout_width="1.5dp"
            android:layout_height="0dp"
            android:background="@drawable/dotted_line_vertical"
            app:layout_constraintTop_toBottomOf="@id/line_horizontal"
            app:layout_constraintBottom_toTopOf="@id/line_bottom"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            android:layerType="software"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_kitchen"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/line_horizontal"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toStartOf="@id/line_vertical"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/kitchen"
            />

        <TextView
            android:id="@+id/tv_laundry"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_kitchen"
            android:layout_marginTop="29dp"
            app:layout_constraintEnd_toStartOf="@id/line_vertical"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/laundry"
            />

        <TextView
            android:id="@+id/tv_bath"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/tv_laundry"
            android:layout_marginTop="29dp"
            app:layout_constraintEnd_toStartOf="@id/line_vertical"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/bath"
            />

        <View
            android:id="@+id/kitchen_value"
            android:layout_width="10dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="@id/tv_kitchen"
            app:layout_constraintBottom_toBottomOf="@id/tv_kitchen"
            app:layout_constraintStart_toEndOf="@id/line_vertical"
            android:background="@drawable/shape_graph_bar"
            />

        <View
            android:id="@+id/laundry_value"
            android:layout_width="10dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="@id/tv_laundry"
            app:layout_constraintBottom_toBottomOf="@id/tv_laundry"
            app:layout_constraintStart_toEndOf="@id/line_vertical"
            android:background="@drawable/shape_graph_bar"
            />

        <View
            android:id="@+id/bath_value"
            android:layout_width="10dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="@id/tv_bath"
            app:layout_constraintBottom_toBottomOf="@id/tv_bath"
            app:layout_constraintStart_toEndOf="@id/line_vertical"
            android:background="@drawable/shape_graph_bar"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/kitchen_value"
            app:layout_constraintBottom_toBottomOf="@id/kitchen_value"
            app:layout_constraintStart_toEndOf="@id/kitchen_value"
            android:textSize="14dp"
            android:textColor="@color/graph_text"
            android:layout_marginStart="4dp"
            android:text="@{vm.calendarData.kitchenText}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/laundry_value"
            app:layout_constraintBottom_toBottomOf="@id/laundry_value"
            app:layout_constraintStart_toEndOf="@id/laundry_value"
            android:textSize="14dp"
            android:textColor="@color/graph_text"
            android:layout_marginStart="4dp"
            android:text="@{vm.calendarData.laundryText}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/bath_value"
            app:layout_constraintBottom_toBottomOf="@id/bath_value"
            app:layout_constraintStart_toEndOf="@id/bath_value"
            android:textSize="14dp"
            android:textColor="@color/graph_text"
            android:layout_marginStart="4dp"
            android:text="@{vm.calendarData.bathText}"
            />


        <View
            android:id="@+id/line_bottom"
            android:layout_width="match_parent"
            android:layerType="software"
            android:layout_height="1.5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_bath"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_dotted"
            />

        <TextView
            android:id="@+id/tv_graph_1"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            app:layout_constraintTop_toBottomOf="@id/line_bottom"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/graph_text"
            app:layout_constraintStart_toStartOf="@id/line_vertical"
            app:layout_constraintEnd_toEndOf="@id/line_vertical"
            android:text="@string/zero"
            />

        <TextView
            android:id="@+id/tv_graph_2"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            app:layout_constraintTop_toBottomOf="@id/line_bottom"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/graph_text"
            app:layout_constraintStart_toEndOf="@id/tv_graph_1"
            app:layout_constraintEnd_toStartOf="@id/tv_graph_3"
            android:text="@{Integer.toString(vm.calendarData.firstValue)}"
            />

        <TextView
            android:id="@+id/tv_graph_3"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            app:layout_constraintTop_toBottomOf="@id/line_bottom"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/graph_text"
            app:layout_constraintStart_toEndOf="@id/tv_graph_2"
            app:layout_constraintEnd_toStartOf="@id/tv_graph_4"
            android:text="@{Integer.toString(vm.calendarData.secondValue)}"
            />

        <TextView
            android:id="@+id/tv_graph_4"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            app:layout_constraintTop_toBottomOf="@id/line_bottom"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/graph_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="11dp"
            android:text="@{Integer.toString(vm.calendarData.maxValue)}"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/tv_graph_1"
            android:layout_marginTop="33dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
