<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.arduino.water.main.fragment.CalendarViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:ignore="SpUsage">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="19dp"
                    android:gravity="center"
                    android:text="@{@string/date(vm.selectYear,vm.selectMonth)}"
                    android:textColor="@color/basic_icon"
                    android:textSize="27dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/back"
                    app:layout_constraintBottom_toBottomOf="@id/tv_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_date" />

                <ImageView
                    android:id="@+id/iv_next"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/next"
                    android:visibility="@{vm.nowYear == vm.selectYear &amp;&amp; vm.nowMonth == vm.selectMonth ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_date" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_date">

                    <TextView
                        android:id="@+id/tv_total_water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/month_total_water"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/month_total_price"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_total_water" />

                    <TextView
                        android:id="@+id/tv_total_water_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{vm.totalWater}"
                        android:textColor="@color/basic"
                        android:textSize="12dp"
                        app:layout_constraintStart_toEndOf="@id/tv_total_water"
                        app:layout_constraintTop_toTopOf="@id/tv_total_water"
                        />

                    <TextView
                        android:id="@+id/tv_total_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{vm.totalPrice}"
                        android:textColor="@color/basic"
                        android:textSize="12dp"
                        app:layout_constraintStart_toEndOf="@id/tv_total_price"
                        app:layout_constraintTop_toTopOf="@id/tv_total_price" />

                    <TextView
                        android:id="@+id/tv_before_water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/before_month_water"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_before_water_value"
                        app:layout_constraintTop_toTopOf="@+id/tv_before_water_value" />

                    <TextView
                        android:id="@+id/tv_before_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/before_month_water"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_before_price_value"
                        app:layout_constraintTop_toTopOf="@id/tv_before_price_value" />

                    <TextView
                        android:id="@+id/tv_before_water_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@{vm.beforeWater}"
                        android:textColor="@color/pink"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_total_water" />

                    <TextView
                        android:id="@+id/tv_before_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@{vm.beforePrice}"
                        android:textColor="@color/pink"
                        android:textSize="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_total_price" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerview_week"
                    app:layout_constraintTop_toBottomOf="@id/layout_info"
                    android:layout_marginTop="27dp"
                    android:overScrollMode="never"
                    />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    app:layout_constraintTop_toBottomOf="@id/recyclerview_week"
                    android:layout_marginTop="9dp"
                    android:background="@color/line"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recyclerview_calendar"
                    app:layout_constraintTop_toBottomOf="@id/line"
                    android:overScrollMode="never"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
